# aorona.cewlcupp

./: README.md  main.py  pyproject.toml
lev/: Dockerfile
lev/aorona/cewlcupp/: cewlcupp.py  util.py
lev/aorona/levicupp/: __init__.py  archive.py  levicupp.py  util.py
test/: Dockerfile  anthony.txt  cewlcupp.py
